hosts/vpn-1/config/iptables.rules
# Generated by iptables-save v1.8.7 on Fri Sep  4 23:30:56 2026
*mangle
:PREROUTING ACCEPT [1366448451:1375072237477]
:INPUT ACCEPT [294147149:112218406057]
:FORWARD ACCEPT [1071880328:1262270817410]
:OUTPUT ACCEPT [1024637875:1248688542908]
:POSTROUTING ACCEPT [2096518009:2510959333776]
COMMIT
# Completed on Fri Sep  4 23:30:56 2026
# Generated by iptables-save v1.8.7 on Fri Sep  4 23:30:56 2026
*nat
:PREROUTING ACCEPT [15902574:1537170296]
:INPUT ACCEPT [2178218:147136762]
:OUTPUT ACCEPT [168840:12145660]
:POSTROUTING ACCEPT [169074:12161968]
-A POSTROUTING -s 10.48.0.0/16 -o ens3 -j MASQUERADE
-A POSTROUTING -s 10.49.0.0/16 -o ens3 -j MASQUERADE
-A POSTROUTING -s 10.66.66.0/24 -o ens3 -j MASQUERADE
COMMIT
# Completed on Fri Sep  4 23:30:56 2026
# Generated by iptables-save v1.8.7 on Fri Sep  4 23:30:56 2026
*filter
:INPUT DROP [1687:87811]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [51150:66695719]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A INPUT -p ah -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m hashlimit --hashlimit-upto 5/sec --hashlimit-burst 5 --hashlimit-mode srcip --hashlimit-name icmp-echo-drop -j ACCEPT
-A INPUT -p udp -m multiport --dports 443,500,4500,51820 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p ipencap -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A INPUT -s 10.48.0.0/16 -d 172.18.67.174/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 10.49.0.0/16 -d 172.18.67.174/32 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -s 10.48.0.0/16 -d 10.48.0.0/16 -j DROP
-A FORWARD -s 10.48.0.0/16 -d 10.49.0.0/16 -j DROP
-A FORWARD -s 10.49.0.0/16 -d 10.48.0.0/16 -j DROP
-A FORWARD -s 10.49.0.0/16 -d 10.49.0.0/16 -j DROP
-A FORWARD -s 10.48.0.0/16 -d 169.254.0.0/16 -j DROP
-A FORWARD -s 10.49.0.0/16 -d 169.254.0.0/16 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 445 -j DROP
-A FORWARD -p udp -m multiport --ports 137,138 -j DROP
-A FORWARD -p tcp -m multiport --ports 137,139 -j DROP
-A FORWARD -s 10.48.0.0/16 -m conntrack --ctstate NEW -m policy --dir in --pol ipsec -j ACCEPT
-A FORWARD -s 10.49.0.0/16 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -d 10.48.0.0/16 -m owner --gid-owner 15000 -j DROP
-A OUTPUT -d 10.49.0.0/16 -m owner --gid-owner 15000 -j DROP
-A OUTPUT -d 169.254.0.0/16 -m owner --gid-owner 15000 -j DROP
COMMIT
# Completed on Fri Sep  4 23:30:56 2026
